force-app/main/UtilityComponents/messaging/objects/Nuvitek_Message__e/Nuvitek_Message__e.object-meta.xml
<CustomObject>
    <label>Nuvitek Message</label>
    <pluralLabel>Nuvitek Messages</pluralLabel>
</CustomObject> 