force-app/main/UtilityComponents/messaging/objects/Nuvitek_Message__e/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <label>Conversation ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>