force-app/main/UtilityComponents/messaging/objects/Nuvitek_Message__e/fields/SenderId__c.field-meta.xml
<CustomField>
    <fullName>SenderId__c</fullName>
    <label>Sender ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>