force-app/main/UtilityComponents/messaging/objects/Nuvitek_Message__e/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>