force-app/main/UtilityComponents/messaging/objects/Nuvitek_Message__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>